--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head><link rel="stylesheet" href="https://rawgit.com/rohythakur/rohythakur.github.io/master/index.css">
+  <head><link rel="stylesheet" href="index.css">
   </head>
 <header class="navbar navbar-default navbar-fixed-top" id="banner">
   <div class="container"><a class="scrollable" href="#top"><img src="https://s22.postimg.org/ybxk2jjkh/11797824.jpg", alt="Rohyt | UI/UX Design and Development" title="qlip | UI/UX Design and Development"/></a>
