--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
        </ul>
     </div>
   </div>
-  <div id="footer-below">qlip © 
+  <div id="footer-below">@copy;Rohyt 
     <script>document.write(new Date().getFullYear())</script>. All Rights Reversed
   </div>
 </footer>
