--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head><link rel="stylesheet" href="index.css">
+  <head>
+    <script type="text/javascript" src="index.js"></script>
+    <link rel="stylesheet" href="index.css">
   </head>
+  
 <header class="navbar navbar-default navbar-fixed-top" id="banner">
   <div class="container"><a class="scrollable" href="#top"><img src="https://s22.postimg.org/ybxk2jjkh/11797824.jpg", alt="Rohyt | UI/UX Design and Development" title="qlip | UI/UX Design and Development"/></a>
     <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
