--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <script type="text/javascript" src="index.js"></script>
     <link rel="stylesheet" href="index.css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   </head>
   
 <header class="navbar navbar-default navbar-fixed-top" id="banner">
