--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <li><a class="button social" href="https://in.linkedin.com/in/rohyt"><i class="fa fa-fw fa-linkedin"></i></a></li>
         <li><a class="button social" href="http://github.com/rohythakur"><i class="fa fa-fw fa-github"></i></a></li>
         <li><a class="button social" href="https://twitter.com/rohytx"><i class="fa fa-fw fa-twitter"></i></a></li>
+        <li><a class="button social" href="https://facebook.com/rohytt"><i class="fa fa-fw fa-facebook"></i></a></li>
        </ul>
     </div>
   </div>
