--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
     <nav class="collapse navbar-collapse" id="navbar" role="navigation">
       <ul class="nav navbar-nav navbar-right">
-        <li><a class="scrollable" href="#top">About</a></li>
-        <li><a class="scrollable" href="#portfolio">Portfolio</a></li>
-        <li><a class="scrollable" href="#contact">Contact</a></li>
+        <li><a class="scrollable bcolor" href="#top">About</a></li>
+        <li><a class="scrollable bcolor" href="#portfolio">Portfolio</a></li>
+        <li><a class="scrollable bcolor" href="#contact">Contact</a></li>
       </ul>
     </nav>
   </div>
