--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   </head>
   
 <header class="navbar navbar-default navbar-fixed-top" id="banner">
-  <div class="container"><a class="scrollable" href="#top"><img src="https://s22.postimg.org/ybxk2jjkh/11797824.jpg", alt="Rohyt | UI/UX Design and Development" title="qlip | UI/UX Design and Development"/></a>
+  <div class="container "><a class="scrollable" href="#top"><img src="https://s28.postimg.org/e2ay04dot/image.png", alt="Rohyt | UI/UX Design and Development" title="qlip | UI/UX Design and Development"/></a>
     <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
     <nav class="collapse navbar-collapse" id="navbar" role="navigation">
       <ul class="nav navbar-nav navbar-right">
-        <li><a class="scrollable bcolor" href="#top">About</a></li>
-        <li><a class="scrollable bcolor" href="#portfolio">Portfolio</a></li>
-        <li><a class="scrollable bcolor" href="#contact">Contact</a></li>
+        <li><a class="scrollable " href="#top">About</a></li>
+        <li><a class="scrollable " href="#portfolio">Portfolio</a></li>
+        <li><a class="scrollable " href="#contact">Contact</a></li>
       </ul>
     </nav>
   </div>
