--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
     <nav class="collapse navbar-collapse" id="navbar" role="navigation">
       <ul class="nav navbar-nav navbar-right">
-        <li><a class="scrollable " href="#top">About</a></li>
+        <li><a class="scrollable " href="#top"><p style="color:#FFFF00;">About</p></a></li>
         <li><a class="scrollable " href="#portfolio">Portfolio</a></li>
         <li><a class="scrollable " href="#contact">Contact</a></li>
       </ul>
