--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <nav class="collapse navbar-collapse" id="navbar" role="navigation">
       <ul class="nav navbar-nav navbar-right">
         <li><a class="scrollable " href="#top"><p style="color:#FFFF00;">About</p></a></li>
-        <li><a class="scrollable " href="#portfolio">Portfolio</a></li>
-        <li><a class="scrollable " href="#contact">Contact</a></li>
+        <li><a class="scrollable " href="#portfolio"><p style="color:#FFFF00;">Portfolio</p></a></li>
+        <li><a class="scrollable " href="#contact"><p style="color:#FFFF00;">Contact</p></a></li>
       </ul>
     </nav>
   </div>
