updated postimg urls
update urls for certificates and images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   
 <header class="navbar navbar-default navbar-fixed-top" id="banner">
-  <div class="container "><a class="scrollable" href="#top"><img src="https://s28.postimg.org/e2ay04dot/image.png", alt="Rohyt | UI/UX Design and Development" title="qlip | UI/UX Design and Development"/></a>
+  <div class="container "><a class="scrollable" href="#top"><img src="https://s28.postimg.cc/e2ay04dot/image.png", alt="Rohyt | UI/UX Design and Development" title="qlip | UI/UX Design and Development"/></a>
     <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
     <nav class="collapse navbar-collapse" id="navbar" role="navigation">
       <ul class="nav navbar-nav navbar-right">
@@ -25,15 +25,15 @@
     <div class="intro-text">
       <p>Front-End Developer and UX/UI designer, with practical experience in project management, branding strategy, and creative direction;  devoted to functional programming and information architecture.</p>
       <hr class="star-bright"/><span class="skills">Web Developer - User Experience Designer - Android Developer - Cyber Security</span>
-    </div><img src="https://s22.postimg.org/ybxk2jjkh/11797824.jpg", alt="A picture of Rohit at tilokinath temple mandi .", title="A picture of Rohit looking at  Victoria Bridge.")/>
+    </div><img src="https://s22.postimg.cc/ybxk2jjkh/11797824.jpg", alt="A picture of Rohit at tilokinath temple mandi .", title="A picture of Rohit looking at  Victoria Bridge.")/>
   </header>
   <!-- Gallery Grid Section-->
   <section id="portfolio">
     <h2>Portfolio</h2>
     <hr class="star-dark"/>
     <ul class="grid">
-      <li><img src="https://s16.postimg.org/hi82d5fph/rohyt.png" alt=""/></li>
-      <li><img src="https://s21.postimg.org/x8dpo2p3r/rohyt.png" alt=""/></li>
+      <li><img src="https://s16.postimg.cc/hi82d5fph/rohyt.png" alt=""/></li>
+      <li><img src="https://s21.postimg.cc/x8dpo2p3r/rohyt.png" alt=""/></li>
 </ul>
   </section>
   <!-- Contact Section-->
