--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
        </ul>
     </div>
   </div>
-  <div id="footer-below">Rohyt © 
+  <div id="footer-below">Rohit © 
     <script>document.write(new Date().getFullYear())</script>. All Rights Reversed
   </div>
 </footer>
